# MuseRadio-DEMO

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults
MuseRadioDemo/: MuseRadioDemo.ino
MuseRadioDemo/data/: linkS  nameS
RadioV00/: RadioV00.ino
RadioV00/data/: linkS  nameS
RadioV01/: AirPlayService.cpp  AirPlayService.h  CMakeLists.txt  MuseHTTPClient.h  PNG_FS_Support.ino  RadioV01.ino  SpotifyConnect.cpp  SpotifyConnect.h  UsbAudioService.cpp  UsbAudioService.h  UsbDisplayService.cpp  UsbDisplayService.h  radio.php
RadioV01/data/: QR  linkS  radio_catalog.csv
components/cspot_component/: CMakeLists.txt  bell_compat.hpp  cspot_component.c
components/espressif__usb_device_uac/: CMakeLists.txt  usb_device_uac.c
components/espressif__usb_device_uac/include/: usb_device_uac.h
components/espressif__usb_device_uac/tusb/: tusb_config.h  usb_descriptors.c
components/espressif__usb_device_uac/tusb_uac/: tusb_config_uac.h  uac_descriptors.h
components/muse_airplay_raop/: CMakeLists.txt  airplay_dummy.c  alac_wrapper.cpp  alac_wrapper.h  log_util.c  log_util.h  raop.c  rtp.c  rtp.h  util.c  util.h
libraries/Arduino_ESP32_OTA/src/: Arduino_ESP32_OTA.h
libraries/ESP32-audioI2S/.gitt/: config  index  packed-refs
libraries/ESP32-audioI2S/.gitt/logs/: HEAD
libraries/ESP32-audioI2S/.gitt/objects/pack/: pack-7a87ac93989f0b9d5e5b2f5e1213783146fef47b.idx
libraries/ESP32-audioI2S/.gitt/refs/heads/: master
libraries/ESP32-audioI2S/src/: Audio.cpp  Audio.h
libraries/IRremoteESP8266/src/: IRrecv.cpp
libraries/QRCode/src/: qrcodeR.c
libraries/TFT_eSPI/: User_Setup.h  User_SetupBrain.h
libraries/TFT_eSPI/Processors/: TFT_eSPI_ESP32_S3.h
tools/: airplay_sine_test.ps1  airplay_stream_file.ps1
tools/windows_usb_display_driver/: README.md
